[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chem_wasserstein"
authors = [
    {name = 'Cameron Hagreaves', email = 'cameron.h@rgreaves.me.uk'},
    {name = "Sterling G. Baird", email = "sterling.baird@utah.edu"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    'Development Status :: 5 - Production/Stable',  
    'Intended Audience :: Developers',     
    'Topic :: Software Development :: Build Tools',
    'Programming Language :: Python :: 3',      
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7'
    ]
dynamic = ["version", "description"]

requires-python = ">=3.7,<=3.9"

dependencies = [
    "pqdm ==0.1.0",
    "plotly",
    "pandas",
    "numba >=0.53.1",
    "scipy",
    "tqdm",
    "umap-learn",
    "dist_matrix",
    "ElMD ==0.4.8",
    "matminer",
    "scikit_learn",
]

[project.urls]
Home = "https://github.com/sparks-baird/ElM2D"
